--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<img src="assets/images/bouncy-ball-500.png" alt="OFiDCrypt Transparent Logo" />
+				<a href="bouncyball.html" class="no-style-link">
+					<img src="assets/images/bouncy-ball-500.png" alt="OFiDCrypt Transparent Logo" />
+				</a>
 			</div>
 		</header>
 
