--- a/bouncyball.html
+++ b/bouncyball.html
@@ -371,9 +371,9 @@
 					<div class="modal-content">
 						<span class="close" onclick="closeModal('advisory')">&times;</span>
 						<h2>Auto-Redeem</h2>
-						<p>🛠️ Under Maintenance 🛠️<br>Please click <a href="#contact-form">here</a> to manually submit your code in our form</p>
+						<p><b>🛠️ COMING SOON 🛠️</b><br>Please click <a href="#contact-form">here</a> to manually submit your code in our form</p>
 					</div>
-				</div>
+				</div>b
 
 				<style>
 					/* Modal-specific styles using your existing variables */
