--- a/bouncyball.html
+++ b/bouncyball.html
@@ -373,7 +373,7 @@
 						<h2>Auto-Redeem</h2>
 						<p><b>🛠️ COMING SOON 🛠️</b><br>Please click <a href="#contact-form">here</a> to manually submit your code in our form</p>
 					</div>
-				</div>b
+				</div>
 
 				<style>
 					/* Modal-specific styles using your existing variables */
