Fixed filename capitalization issue causing logo display issues on onegiddy.html.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -93,7 +93,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/giddy-logo.PNG" alt="GIDDY Logo" class="logo">
+				<img src="/giddy-logo.png" alt="GIDDY Logo" class="logo">
 			</a>
 		</header>
 
