Text changes and headings for clarity.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -779,7 +779,7 @@
 
 					<!-- Description -->
 					<p>
-						GIDDY StableToken is Canada’s first (unofficial) stable digital asset, designed to reflect the value of 1
+						A GIDDY StableToken is Canada’s first (unofficial) stable digital asset, designed to reflect the value of 1
 						Canadian Dollar through real-time commerce. It captures the spirit of our magical character
 						Giddy — playful, trustworthy, and full of heart — in each and every token.
 						
