Added text clarity and some additional jup-links for better navigation.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -779,15 +779,20 @@
 
 					<!-- Description -->
 					<p>
-						A GIDDY StableToken is Canada’s first (unofficial) stable digital asset, designed to reflect the value of 1
-						Canadian Dollar through real-time commerce. It captures the spirit of our magical character
-						Giddy — playful, trustworthy, and full of heart — in each and every token.
-						
-					<p style="text-align: center;"></p>
-						Every token represents what you put in — no speculation, no surprises. Anchored in single-sided
+						A GIDDY StableToken is Canada’s first (unofficial) stable digital asset, designed to reflect the
+						value of 1 Canadian Dollar through real-time commerce. It captures the spirit of our magical
+						character <a href="/ofidtales.html#meet-crew">Giddy</a> — playful,
+						trustworthy, and full of heart — in each and every token.
+					</p>
+
+					<p style="text-align: center;">
+						It represents what you put in, a near 1:1 swap — no speculation, no surprises. Anchored in
+						single-sided
 						liquidity, it behaves like a stablecoin but remains free from centralized control.
-						It’s the foundation for building #MicroEconomies — small, resilient loops where value flows
-						between creators and communities.
+						It’s the foundation for building <a
+							href="https://ofidcrypt.ca/microeconomies-growing-wealth-without-the-crypto-trading-magic-trick"
+							target="_blank">#MicroEconomies</a> — small, resilient loops where value flows between
+						creators and communities.
 						GIDDY isn’t just a token. It’s a quiet promise — a way to author value with intention and joy.
 					</p>
 
