Updated jump list for GIDDY Swaps on onegiddy.html

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -814,7 +814,7 @@
 					</div>
 					<!-- Header -->
 					<div>
-						<header class="major" id="buy-expb">
+						<header class="major" id="swap-giddy">
 							<span class="date">Wallets & Providers</span>
 							<h1>Get Tokens</h1>
 						</header>
