Added missing elements to geckoterminal iframe on onegiddy.html to resolve loading on mobile networks.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -284,9 +284,10 @@
 			</script>
 
 			<!-- Chart -->
-			<section id="expb-chart">
-				<div id="dexscreener-embed"><iframe
-						src="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5?embed=1&info=1&swaps=1&grayscale=0&light_chart=0&chart_type=price&resolution=15m"></iframe>
+			<section id="giddy-chart">
+				<div id="dexscreener-embed"><iframe height="100%" width="100%" id="geckoterminal-embed" title="GeckoTerminal Embed"
+						src="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5?embed=1&info=1&swaps=1&grayscale=0&light_chart=0&chart_type=price&resolution=15m"
+						frameborder="0" allow="clipboard-write" allowfullscreen></iframe>
 				</div>
 			</section>
 
