--- a/onegiddy.html
+++ b/onegiddy.html
@@ -285,9 +285,9 @@
 
 			<!-- Chart -->
 			<section id="giddy-chart">
-				<div id="dexscreener-embed"><iframe height="100%" width="100%" id="geckoterminal-embed" title="GeckoTerminal Embed"
-						src="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5?embed=1&info=1&swaps=1&grayscale=0&light_chart=0&chart_type=price&resolution=15m"
-						frameborder="0" allow="clipboard-write" allowfullscreen></iframe>
+				<div id="dexscreener-embed"><iframe id="geckoterminal-embed" title="GeckoTerminal Embed"
+						src="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5?embed=1&info=1&swaps=1&grayscale=0&light_chart=0&chart_type=price&resolution=15m&full_chart=1&lazy=0&cb=1697059200&theme=light"
+						width="100%" height="100%" allow="clipboard-write" allowfullscreen loading="lazy"></iframe>
 				</div>
 			</section>
 
