Updated open graph for onegiddy.html and minor text tweaks for clarity.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -33,28 +33,29 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>GIDDY of Canada | Stabletoken by OFiDCrypt</title>
+	<title>GIDDY Canada | StableToken by OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
-		content="Learn more and become part of our evolving econunity — Digital Asset Parity with GIDDY Stabletoken.">
-	<meta name="keywords" content="cryptocurrency, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
+		content="Learn more and become part of our evolving economy — Digital Asset Parity with GIDDY StableToken.">
+	<meta name="keywords"
+		content="cryptocurrency, GIDDY, Bouncy Ball, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="GIDDY of Canada | Stabletoken by OFiDCrypt">
+	<meta property="og:title" content="GIDDY Canada | StableToken by OFiDCrypt">
 	<meta property="og:description"
-		content="Learn more and become part of our evolving econunity — Digital Asset Parity with GIDDY Stabletoken.">
-	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncy.webp">
+		content="Learn more and become part of our evolving economy — Digital Asset Parity with GIDDY StableToken.">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-one-giddy-pr.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/onegiddy">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="GIDDY of Canada | Stabletoken by OFiDCrypt">
+	<meta name="twitter:title" content="GIDDY Canada | StableToken by OFiDCrypt">
 	<meta name="twitter:description"
-		content="Learn more and become part of our evolving econunity — Digital Asset Parity with GIDDY Stabletoken.">
-	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-expb-bouncy.webp">
+		content="Learn more and become part of our evolving economy — Digital Asset Parity with GIDDY StableToken.">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-one-giddy-pr.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/onegiddy">
 
 	<!-- Default ICO file with multiple sizes -->
@@ -296,7 +297,7 @@
 				<header class="major" id="giddy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>GIDDY StableToken</h1>
-					<p>Your one-stop shop for all things GIDDY! Tap or click below to copy the CA.</p>
+					<p>Your one-stop shop for all things GIDDY! Tap or click below to copy the <b>Contract Address</b></p>
 					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY BALL</a> Dynamic Token 👀</p>
 				</header>
 
@@ -780,16 +781,16 @@
 
 					<!-- Description -->
 					<p>
-						A GIDDY StableToken is Canada’s first (unofficial) stable digital asset, designed to reflect the
+						Canada’s first (unofficial) stable digital asset, designed to reflect the
 						value of 1 Canadian Dollar through real-time commerce. It captures the spirit of our magical
 						character <a href="/ofidtales.html#meet-crew">Giddy</a> — playful,
 						trustworthy, and full of heart — in each and every token.
 					</p>
 
 					<p style="text-align: center;">
-						It represents what you put in, a near 1:1 swap — no speculation, no surprises. Anchored in
-						single-sided
-						liquidity, it behaves like a stablecoin but remains free from centralized control.
+						GIDDY represents what you put in, a near 1:1 swap for your dollar — no speculation, no
+						surprises, unlocking new ways to spend and gift! Anchored in
+						single-sided liquidity, it behaves like a stablecoin but remains free from centralized control.
 						It’s the foundation for building <a
 							href="https://ofidcrypt.ca/microeconomies-growing-wealth-without-the-crypto-trading-magic-trick"
 							target="_blank">#MicroEconomies</a> — small, resilient loops where value flows between
