--- a/bouncyball.html
+++ b/bouncyball.html
@@ -291,7 +291,7 @@
 				<header class="major" id="bouncy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>BOUNCY BALL</h1>
-					<p>Your one-stop shop for all things Bouncy Ball! Tap or click below to copy the CA.</p>
+					<p>Your one-stop shop for all things Bouncy Ball! Tap or click below to copy the <b>Contract Address</b></p>
 					<p>♻️ Switch to <a href="/onegiddy.html#giddy">GIDDY</a> StableToken 👀</p>
 				</header>
 
