Updated GIDDY proiders image to change BOUNCY BALL image header to Giddy's on onegiddy.html.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -825,7 +825,7 @@
 					<!-- Info Tile -->
 					<section id="provider-tile" class="provider-tile">
 						<a href="https://t.me/c/2292263577/35699" target="_blank">
-							<img src="/assets/images/giddy-providers-1.png" alt="Providers">
+							<img src="/assets/images/giddy-providers-2.png" alt="Providers">
 						</a>
 
 						<!-- Token Buttons -->
@@ -858,7 +858,7 @@
 					<!-- Section Description -->
 					<header>
 						<p style="text-align: center;">
-							GIDDY Stabletoken (GIDDY) is a Solana SPL2022 Program Token designed to model stability,
+							GIDDY StableToken (GIDDY) is a Solana SPL2022 Program Token designed to model stability,
 							trust, and commerce-backed redemption.
 						</p>
 					</header>
