Added GFIDDY and BOUNCY BALL description claity on onegiddy.html and bouncyball.html.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -291,7 +291,8 @@
 				<header class="major" id="bouncy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>BOUNCY BALL</h1>
-					<p>Your one-stop shop for all things Bouncy Ball! Tap or click below to copy the <b>Contract Address</b></p>
+					<p>You can grow value as we grow with Bouncy Ball! Tap or click below to copy the <b>Contract
+							Address</b></p>
 					<p>♻️ Switch to <a href="/onegiddy.html#giddy">GIDDY</a> StableToken 👀</p>
 				</header>
 
@@ -776,24 +777,25 @@
 
 					<!-- Description -->
 					<p>
-						Giddy’s Bouncy Ball (e𝕏PB) is a fun, secure, and rewarding token with real-world value 🎉
+						Giddy’s BOUNCY BALL (e𝕏PB) is a fun, secure, and rewarding token with real-world value 🎉
 						It’s designed to be used as a form of payment for products and services offered by OFiDCrypt
 						Marketing and
-						<a href="https://giddys.shop" target="_blank">Giddy’s Shop</a>—an asset that drives both
+						<a href="https://giddys.shop" target="_blank">Giddy’s Shop</a> — an asset that drives both
 						business and consumer growth while reducing spending through digital asset payments; encouraging
 						Web3
 						adoption, and enhancing entertainment.
 					</p>
 
 					<p style="text-align: center;">
-						Easy to get and safe to hold, Bouncy Ball grows in many ways—such as through the
+						Easy to get and safe to hold, Bouncy Ball grows in many ways — such as through our
 						<a href="/ofidtales.html#giddy-tales-nav">Giddy Tales Series</a> as it gains popularity, and
 						through the
 						redistribution of tokens within our ecosystem from every sale.
-						Whether for rewards, innovation, or fun, it's rolling toward a future where Web3 meets
-						creativity—and the more
+						Whether for gifting, innovation, or fun, it's rolling toward a future where Web3 meets
+						creativity — and the more
 						businesses that adopt
-						#MicroEconomies, the faster we all grow! 🚀
+						<a href="https://ofidcrypt.ca/microeconomies-growing-wealth-without-the-crypto-trading-magic-trick"
+							target="_blank">#MicroEconomies</a> — the faster we all grow! 🚀
 					</p>
 
 					<!-- Bulletins & Social Links Buttons -->
