--- a/onegiddy.html
+++ b/onegiddy.html
@@ -297,7 +297,8 @@
 				<header class="major" id="giddy">
 					<span class="date">OFiDCrypt & Giddy's</span>
 					<h1>GIDDY StableToken</h1>
-					<p>Your one-stop shop for all things GIDDY! Tap or click below to copy the <b>Contract Address</b></p>
+					<p>Your one-stop shop for all things GIDDY! Tap or click below to copy the <b>Contract Address</b>
+					</p>
 					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY BALL</a> Dynamic Token 👀</p>
 				</header>
 
@@ -794,16 +795,17 @@
 						It’s the foundation for building <a
 							href="https://ofidcrypt.ca/microeconomies-growing-wealth-without-the-crypto-trading-magic-trick"
 							target="_blank">#MicroEconomies</a> — small, resilient loops where value flows between
-						creators and communities.
-						GIDDY isn’t just a token. It’s a quiet promise — a way to author value with intention and joy.
+						businesses, creators and communities.
 					</p>
 
 					<p style="text-align: center;">
-						GIDDY unlocks discounts, digital gifts, and real-world value at
-						<a href="https://giddys.shop" target="_blank">Giddys.Shop</a> — Pay with GIDDY for lower prices
-						and bonus tokens like Bouncy Ball. Every purchase fuels growth and redistributes rewards.
-						Thousands already trade GIDDY. You earn just by shopping — no cost, no catch. The groundwork is
-						set. Now we show what’s next.
+						GIDDY paves the way for organic growth through new ways to spend, building and exchanging
+						real-world value through products at
+						<a href="https://giddys.shop" target="_blank">Giddys.Shop</a> — pay with BOUNCY BALL for lower
+						prices and receive digital gifts in GIDDY.
+						Every purchase fuels growth, with thousands already trading BOUNCY BALL in support of our mission — now
+						you can seamlessly swap between a dynamic token and <b>lock in</b> the profit with GIDDY.
+						You earn just by shopping — no cost, no catch. The groundwork is set. Now we show what’s next! 🚀
 					</p>
 
 					<!-- Bulletins & Social Links Buttons -->
