Updated X account on ofidtales.html and onegiddy.html to Giddys_CA

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -125,7 +125,7 @@
 						<img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 					</a>
 				</li>
-				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
+				<li><a href="https://x.com/Giddys_CA" class="icon brands fa-x-twitter"><span class="label">X</span></a>
 				</li>
 				<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span
 							class="label">YouTube</span></a>
@@ -964,7 +964,7 @@
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
+						<li><a href="https://x.com/Giddys_CA" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
 						<li><a href="https://youtube.com/@OFiDCrypt" class="icon brands fa-youtube"><span
 									class="label">YouTube</span></a></li>
