Test Birdeye chart in place of GeckoTerminal on onegiddy.html.

--- a/onegiddy.html
+++ b/onegiddy.html
@@ -286,9 +286,10 @@
 
 			<!-- Chart -->
 			<section id="giddy-chart">
-				<div id="dexscreener-embed"><iframe id="geckoterminal-embed" title="GeckoTerminal Embed"
-						src="https://www.geckoterminal.com/solana/pools/8pJonw6WVjQkDndb6HGuCMdxb4sXiDfeFumxconoKB5?embed=1&info=1&swaps=1&grayscale=0&light_chart=0&chart_type=price&resolution=15m&full_chart=1&lazy=0&cb=1697059200&theme=light"
-						width="100%" height="100%" allow="clipboard-write" allowfullscreen loading="lazy"></iframe>
+				<div id="dexscreener-embed"><iframe width="100%" height="600"
+						src="https://birdeye.so/tv-widget/8kQzvMELBQGSiFmrXqLuDSpYVLKkNoXE4bUQCC14wj3Z?chain=solana&viewMode=pair&chartInterval=15&chartType=Candle&chartTimezone=America%2FVancouver&chartLeftToolbar=show&theme=dark"
+						frameborder="0" allowfullscreen>
+					</iframe>
 				</div>
 			</section>
 
@@ -803,9 +804,11 @@
 						real-world value through products at
 						<a href="https://giddys.shop" target="_blank">Giddys.Shop</a> — pay with BOUNCY BALL for lower
 						prices and receive digital gifts in GIDDY.
-						Every purchase fuels growth, with thousands already trading BOUNCY BALL in support of our mission — now
+						Every purchase fuels growth, with thousands already trading BOUNCY BALL in support of our
+						mission — now
 						you can seamlessly swap between a dynamic token and <b>lock in</b> the profit with GIDDY.
-						You earn just by shopping — no cost, no catch. The groundwork is set. Now we show what’s next! 🚀
+						You earn just by shopping — no cost, no catch. The groundwork is set. Now we show what’s next!
+						🚀
 					</p>
 
 					<!-- Bulletins & Social Links Buttons -->
